--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "emailjs-com": "^3.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.3",
+    "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
